Re-developed some stuff
Made tab-autocomplete work
Made CD work with directory manager
Made history work with steps
Made the GUI launch properly

Made some very minor changes to the original code-base

--- a/src/com/git/ifly6/utilities/UPWindow.form
+++ b/src/com/git/ifly6/utilities/UPWindow.form
@@ -17,6 +17,7 @@
         <properties>
           <font name="Monospaced" size="11"/>
           <horizontalAlignment value="2"/>
+          <toolTipText value="Type commands here, hit enter to execute"/>
         </properties>
       </component>
       <scrollpane id="a8ca7">
